--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
       crossorigin="anonymous"
     />
 
-    <title>My-Cloudbook | Your personal notebook in the cloud.</title>
+    <title>iCloudbook | Your personal notebook in the cloud.</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
